Layout bugs fixed on CreateNewList

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -101,14 +101,11 @@
   border: 2px solid #e8ff79;
 }
 
+/*/ CreateNewList.tsx /*/
+
 .preview-list-container {
   grid-column: col-start 6 / span 4;
-  grid-row: 2 / span 8;
-  width: 100%;
-  height: 500px;
-  padding: 0px 80px;
-  margin-top: 10px;
-  display: flex;
+  grid-row: 2 / span 7;
 }
 
 .home-container {
@@ -139,14 +136,15 @@
   padding: 10px;
 }
 
+/*/ AddSomeGoals.tsx /*/
+
 .add-some-goals-container {
-  grid-column: col-start 5 / span 4;
+  grid-column: col-start 6 / span 4;
   margin-left: 60px;
-  grid-row: 2 / span 10;
-  width: 120%;
-  height: 500px;
+  grid-row: 2 / span 7;
   border-radius: 10px;
   display: flex;
+  width: 600px;
   flex-direction: column;
   justify-content: flex-start;
   text-align: center;
