--- a/client/src/styles/CreateNewList.css
+++ b/client/src/styles/CreateNewList.css
@@ -31,11 +31,13 @@ button {
   border: 1px solid #e8ff79;
   border-radius: 20px;
   color: white;
-  overflow: hidden;
+  height: 35%;
 }
 
 .chosen-tab {
-  margin: 7px 0px 20px 0px;
+  margin: 7px 0px 15px 0px;
+  display: flex;
+  justify-content: center;
 }
 
 .chosen-tab-selected {
@@ -60,12 +62,6 @@ button {
   background-color: #473cd6;
 }
 
-#add-goals-to-list {
-  padding: 10px 18px;
-  background-color: #473cd6;
-  color: #e8ff79;
-}
-
 .preview-vid {
   height: 130px;
   flex: 1;
@@ -73,13 +69,9 @@ button {
   margin-top: 10px;
 }
 
-.preview-items {
-  display: flex;
-  flex-direction: column;
-}
-
 .preview-text-wrap {
   display: flex;
+  width: 80%;
   flex-direction: row;
   align-items: center;
   padding: 0px 20px;
@@ -137,7 +129,7 @@ input {
 #submit-list-goals {
   border-radius: 30px;
   font-size: 18px;
-  padding: 20px;
+  padding: 16px;
   line-height: 1.5;
   width: 120px;
   background-color: orange;
@@ -203,8 +195,8 @@ input {
 }
 
 .add-goals {
-  display: flex;
-  width: 60rem;
+  width: 550px;
+  margin-left: 50px;
   border-radius: 10px;
 }
 
